Fix container too wide bug

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   flex: 1;
 }
 
-.big-container {
+.main-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,9 +16,8 @@ body {
 }
 
 .grid-container {
-    height: 3vw;
-    width: 3vw;
     display: flex;
+    flex: 1;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -35,15 +34,13 @@ body {
 .row-container {
     display: flex;
     flex-direction: row;
+    flex: 1;
 }
 
 .pixel {
     background-color: red;
     width: 50px;
     height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     outline: 1px solid;
     outline-color:lightgray;
     margin-top: 1px;
